Feat/error handling (#8)
* feat: adjust error status code in handler

* docs: update swagger
