# docs/swagger.json
@@ -124,8 +124,8 @@
                             "$ref": "#/definitions/model.Task"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {}
                     }
                 }
@@ -167,12 +167,8 @@
                             "$ref": "#/definitions/model.Task"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {}
                     }
                 }
